# helix-stadium-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/helix_stadium_mcp/: __init__.py  __main__.py  cli.py  config.py  defaults.py  modeldefs.py  server.py
src/helix_stadium_mcp/catalog/: __init__.py
src/helix_stadium_mcp/codec/: __init__.py  floatfmt.py  magic.py  serialize.py
src/helix_stadium_mcp/encoding/: __init__.py
src/helix_stadium_mcp/preset/: __init__.py
src/helix_stadium_mcp/setlist/: __init__.py
src/helix_stadium_mcp/tools/: __init__.py  admin.py  edit.py  models.py  read.py  setlist.py
src/helix_stadium_mcp/util/: __init__.py  envelope.py
src/helix_stadium_mcp/validation/: __init__.py
src/helix_stadium_mcp/writer/: __init__.py
tests/: conftest.py  test_catalog.py  test_codec.py  test_encoding.py  test_modeldefs.py  test_preset.py  test_setlist.py  test_writer.py
